# BrotBoxEngine

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  BrotBoxEngine.sln  CMakeLists.txt  Commits that are not from me.txt  LICENSE  README.md  THIRD_PARTY_LICENSES  engine.natvis  makefile
BrotBoxEngine/: AdafruitMacroPadRP2040.cpp  AllTests.h  AllocBlock.cpp  Array.h  AutoRefCountable.cpp  BezierCurve2.cpp  BrotBoxEngine.cpp  BrotBoxEngine.h  BrotBoxEngine.vcxproj  BrotBoxEngine.vcxproj.filters  BrotTime.cpp  ByteBuffer.cpp  CMakeLists.txt  CPUWatch.h  CameraControlNoClip.cpp  ChatGPTComm.cpp  Circle.cpp  Color.cpp  Color.h  ColorByte.cpp  Cube.cpp  DataType.h  DefaultDestroyer.h  DefragmentationAllocator.h  DefragmentationAllocatorTest.h  DynamicArray.h  EmptyClass.h  EngineSettings.cpp  Error.cpp  ExceptionHelper.h  Exceptions.h  FatalErrors.cpp  Font.cpp  FragmentShader.cpp  Game.cpp  Game.h  GameTime.cpp  GameTime.h  GeneralPurposeAllocator.h  GeneralPurposeAllocatorPerformanceTime.h  (+172 more)
BrotBoxEngine/Assets/: CMakeLists.txt
BrotBoxEngine/BBE/: AdafruitMacroPadRP2040.h  AllTests.h  AllocBlock.h  Array.h  Async.h  AutoRefCountable.h  BezierCurve2.h  BrotBoxEngine.h  BrotTime.h  ByteBuffer.h  CMakeLists.txt  CPUWatch.h  CameraControlNoClip.h  CanvasView2D.h  ChatGPTComm.h  Circle.h  Color.h  ColorByte.h  Cube.h  CursorMode.h  DataType.h  DefaultDestroyer.h  DefragmentationAllocator.h  DefragmentationAllocatorTest.h  DynamicArray.h  EmptyClass.h  EndlessGrid.h  EngineSettings.h  Error.h  ExceptionHelper.h  Exceptions.h  FatalErrors.h  FillMode.h  Font.h  FragmentShader.h  Future.h  Game.h  GameTime.h  GeneralPurposeAllocator.h  GeneralPurposeAllocatorPerformanceTime.h  (+130 more)
BrotBoxEngine/GlobalKeyboardDLL/: CMakeLists.txt  GlobalKeyboard.cpp  GlobalKeyboard.h  Main.cpp
BrotBoxEngine/NullRenderer/: CMakeLists.txt  NullRendererManager.cpp
BrotBoxEngine/OpenGL/: OpenGLCircle.cpp  OpenGLCube.cpp  OpenGLFragmentShader.cpp  OpenGLImage.cpp  OpenGLLightBaker.cpp  OpenGLManager.cpp  OpenGLModel.cpp  OpenGLRectangle.cpp  OpenGLSphere.cpp
BrotBoxEngine/Vulkan/: CMakeLists.txt  Shader2DPrimitive.vert  Shader3DPrimitive.vert  Shader3DTerrain.tesc  Shader3DTerrain.vert  VWDepthImage.cpp  VulkanBuffer.cpp  VulkanCircle.cpp  VulkanCommandPool.cpp  VulkanCube.cpp  VulkanDescriptorPool.cpp  VulkanDescriptorSet.cpp  VulkanDescriptorSetLayout.cpp  VulkanDevice.cpp  VulkanFence.cpp  VulkanFragmentShader.cpp  VulkanHelper.cpp  VulkanImage.cpp  VulkanInstance.cpp  VulkanLight.cpp  VulkanManager.cpp  VulkanPhysicalDevices.cpp  VulkanPipeline.cpp  VulkanQueryPool.cpp  VulkanRectangle.cpp  VulkanRenderPass.cpp  VulkanSemaphore.cpp  VulkanShader.cpp  VulkanSphere.cpp  VulkanStopWatch.cpp  VulkanSurface.cpp  VulkanSwapchain.cpp  frag2DImage.spv  frag2DPrimitive.spv  frag3DPrimitive.spv  frag3DTerrain.spv  runCompiler.bat  tesc3DTerrain.spv  vert2DPrimitive.spv  vert3DPrimitive.spv
BrotBoxEngineGTest/: CMakeLists.txt  HelloWorldTest.cpp  ListTest.cpp  TestUtils.h  google_test.cmake
Examples/: CMakeLists.txt  CreateExample.py
Examples/Example2DPhysicsBallPit/: CMakeLists.txt  Example2DPhysicsBallPit.cpp
Examples/Example2DPhysicsChainReaction/: Example2DPhysicsChainReaction.cpp
Examples/Example3D/: CMakeLists.txt  Example3D.cpp
Examples/Example3DLineDraw/: CMakeLists.txt  Example3DLineDraw.cpp
Examples/ExampleBackroomsGenerator/: CMakeLists.txt  ExampleBackroomsGenerator.cpp  Room.cpp  Room.h  Rooms.cpp  Rooms.h
Examples/ExampleBalloonGame/: CMakeLists.txt  ExampleBalloonGame.cpp
Examples/ExampleConvexHull/: ExampleConvexHull.cpp
Examples/ExampleCurves/: ExampleCurves.cpp
Examples/ExampleDivergence/: CMakeLists.txt  ExampleDivergence.cpp
Examples/ExampleDoublePendulum/: ExampleDoublePendulum.cpp
Examples/ExampleFarCube/: CMakeLists.txt  ExampleFarCube.cpp
Examples/ExampleFlowField/: CMakeLists.txt  ExampleFlowField.cpp
Examples/ExampleFluidSimulation/: CMakeLists.txt  ExampleFluidSimulation.cpp
Examples/ExampleGitReview/: BinaryDiffPresenters.cpp  BinaryDiffPresenters.h  CMakeLists.txt  CppSyntaxHighlight.cpp  CppSyntaxHighlight.h  ExampleGitReview.cpp  GitRunner.cpp  GitRunner.h  MergeConflictResolve.cpp  MergeConflictResolve.h  NativeFolderPicker.cpp  NativeFolderPicker.h  RepoModel.cpp  RepoModel.h  ReviewGui.cpp  ReviewGui.h  ReviewSession.cpp  ReviewSession.h  TextDiff.cpp  TextDiff.h
Examples/ExampleGrid/: CMakeLists.txt  ExampleGrid.cpp
Examples/ExampleHomeAssistant/: CMakeLists.txt  ExampleHomeAssistant.cpp
Examples/ExampleLSystem/: CMakeLists.txt  ExampleLSystem.cpp
Examples/ExampleMandelbrot/: ExampleMandelbrot.cpp
Examples/ExampleMandelbrotSIMD/: CMakeLists.txt  ExampleMandelbrotSIMD.cpp
Examples/ExampleMandelbrotShader/: CMakeLists.txt  ExampleMandelbrotShader.cpp  fragMandelbrot.spv  runCompiler.bat
Examples/ExampleMother/: CMakeLists.txt  EMBrainTeaser.cpp  EMBrainTeaser.h  EMGoogleCalendar.cpp  EMGoogleCalendar.h  EMProcess.cpp  EMProcess.h  EMTab.cpp  EMTab.h  EMTask.cpp  EMTask.h  EMUrl.cpp  EMUrl.h  EmUrl.h  ExampleMother.cpp  PasswordGenerator.cpp  PasswordGenerator.h  Task.cpp
Examples/ExampleNeuralRocket/: ExampleNeuralRocket.cpp
Examples/ExamplePaint/: CMakeLists.txt  ExamplePaint.cpp  ExamplePaintEditor.cpp  ExamplePaintEditor.h  ExamplePaintGui.cpp  ExamplePaintGui.h  ExamplePaintInput.h  ExamplePaintPalette.cpp  ExamplePaintPalette.h  ExamplePaintPerf.cpp  ExamplePaintPerf.h
Examples/ExampleParticleGravity/: CMakeLists.txt  ExampleParticleGravity.cpp
Examples/ExampleParticleGravity2D/: CMakeLists.txt  ExampleParticleGravity2D.cpp
Examples/ExampleParticleLife/: CMakeLists.txt  ExampleParticleLife.cpp
Examples/ExamplePasswordGenerator/: CMakeLists.txt  ExamplePasswordGenerator.cpp
Examples/ExamplePendulumChaosShader/: CMakeLists.txt  ExamplePendulumChaosShader.cpp  fragPCS.spv
Examples/ExamplePhasmophobiaCheatSheet/: CMakeLists.txt  CheatSheet.txt  ExamplePhasmophobiaCheatSheet.cpp
Examples/ExamplePixelObserver/: CMakeLists.txt  ExamplePixelObserver.cpp
Examples/ExampleRotatingCubeIntersections/: CMakeLists.txt  (+1 more)
(+260 files in other folders)
